tests/fixtures/invalid/pow_none_bool_str.py
# Cannot call pow() with None, Bool, Str
x = pow(None, True, "hello")
